--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 					</ul>
 				</nav>
 			</div>
-			<nav class="menu">
-				
-			</nav>
 		</div>
 	</header>
+	<div class="container description">
+		<h1>Freelance Web Designer & Developer based in Galway, Irland. <br/> Highly experienced in Designin & developing custom Worldpress Websites.</h1>
+	</div>
 </body>
 </html>
