--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 		</div>
 		<div class="container flex wrapper">
-			<img class="logo" src="img/logo.svg">
+			<a href="index.html"><img class="logo" src="img/logo.svg"><a>
 			<div class="right-block flex">
 				<nav class="menu">
 					<ul class="nav flex">
-						<li><a href="#">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="#">Portfolio</a></li>
 						<li><a href="#">Services</a></li>
 						<li><a href="#">About</a></li>
