--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
 	<div class="container description">
 		<h1>Freelance Web Designer & Developer based in Galway, Irland. <br/> Highly experienced in Designin & developing custom Worldpress Websites.</h1>
 	</div>
+	<div class="container banner flex">
+		<div class="img">
+			<img src="img/banner.svg">
+		</div>
+		<h1>Fully Responsive, custom designed WorldPress CMS website</h1>
+	</div>
 </body>
 </html>
