--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Home</title>
 	<meta charset="utf-8">
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -35,7 +35,11 @@
 		<div class="img">
 			<img src="img/banner.svg">
 		</div>
-		<h1>Fully Responsive, custom designed WorldPress CMS website</h1>
+		<div class="right">
+			<div class="banx text">
+				<h1 class="ban-text">Fully Responsive, custom designed WorldPress CMS website <i class="fa fa-chevron-circle-right fa-align-right"></i></h1>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
