--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
 		</div>
 		<div class="container flex wrapper">
 			<a href="index.html"><img class="logo" src="img/logo.svg"><a>
-			<div class="right-block flex">
-				<nav class="menu">
-					<ul class="nav flex">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</nav>
+				<div class="right-block flex">
+					<nav class="menu">
+						<ul class="nav flex">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="#">Portfolio</a></li>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
-		</div>
 	</header>
 	<div class="container description">
 		<h1>Freelance Web Designer & Developer based in Galway, Irland. <br/> Highly experienced in Designin & developing custom Worldpress Websites.</h1>
 	</div>
 	<div class="container banner flex">
-		<div class="img">
-			<img src="img/banner.svg">
+		<div class="banner-box">
+			<img class="img" src="img/banner.svg">
 		</div>
-		<div class="right">
+		<div class="right flex">
 			<div class="banx text">
-				<h1 class="ban-text">Fully Responsive, custom designed WorldPress CMS website <i class="fa fa-chevron-circle-right fa-align-right"></i></h1>
+				<h1 class="ban-text">Fully Responsive, custom designed WorldPress <span class="cms"> CMS </span> website <i class="fa fa-chevron-circle-right fa-align-right"></i></h1>
+			</div>
+			<h1 class="view"> View portfolio </h1>
 			</div>
 		</div>
 	</div>
