--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 		<div class="banner-box">
 			<img class="img" src="img/banner.svg">
 		</div>
-		<div class="right flex">
+		<div class="right">
 			<div class="banx text">
 				<h1 class="ban-text">Fully Responsive, custom designed WorldPress <span class="cms"> CMS </span> website </h1>
 			</div>
-			<h1 class="view"><a href="#"> View portfolio <i class="fa fa-chevron-circle-right fa-align-right"></i></h1>
+			<div class="tenten">
+				<h1 class="view"><a href="#"> View portfolio <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
+			</div>
 			</div>
 		</div>
 	</div>
