--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</nav>
+					<div class="burger">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
 				</div>
 			</div>
 	</header>
@@ -35,7 +40,7 @@
 		<div class="banner-box">
 			<img class="img" src="img/banner.svg">
 		</div>
-		<div class="right">
+		<div class="right flex">
 				<h1 class="ban-text">Fully Responsive, custom designed WorldPress <span class="cms"> CMS </span> website </h1>
 			<div class="tenten">
 				<h1 class="view"><a href="#"> View portfolio <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
