burger menu changes

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 						</ul>
 					</nav>
 					<div class="burger">
-						<div></div>
-						<div></div>
-						<div></div>
+						<div class="line"></div>
+						<div class="line"></div>
+						<div class="line"></div>
 					</div>
 				</div>
 			</div>
