--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 		<article>
 			<img src="img/galway-website-design.png">
 			<h1 class="title">Website Design</h1>
-			<!-- <p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p> -->
+			<p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p>
 		</article>
 		<article>
 			<img src="img/galway-wordpress-theme-development.png">
 			<h1 class="title">Website Design</h1>
-			<!-- <p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p> -->
+			<p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p>
 		</article>
 		<article>
 			<img src="img/galway-wordpress-training-tutoring.png">
 			<h1 class="title">Website Design</h1>
-			<!-- <p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p> -->
+			<p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p>
 		</article>
 	</div>
 </body>
