--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 	<div class="container font description">
 		<h1>Freelance Web Designer & Developer based in Galway, Irland. <br/> Highly experienced in Designin & developing custom Worldpress Websites.</h1>
 	</div>
-	<div class="container banner flex">
+	<div class="container banner font flex">
 		<div class="banner-box">
 			<img class="img" src="img/banner.svg">
 		</div>
 		<div class="right flex">
 				<h1 class="ban-text">Fully Responsive, custom designed WorldPress <span class="cms"> CMS </span> website </h1>
 			<div class="tenten">
-				<h1 class="view"><a href="#"> View portfolio <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
+				<h1 class="view"><a class="flex view-align" href="#"><span> View portfolio </span> <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
 			</div>
 			</div>
 		</div>
