--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 		</div>
 		<div class="right flex">
 				<h1 class="ban-text">Fully Responsive, custom designed WorldPress <span class="cms"> CMS </span> website </h1>
-			<div class="tenten">
 				<h1 class="view"><a class="flex view-align" href="#"><span> View portfolio </span> <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
-			</div>
 			</div>
 		</div>
 	</div>
@@ -60,16 +58,19 @@
 			<img src="img/galway-website-design.png">
 			<h1 class="title">Website Design</h1>
 			<p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p>
+			<h1 class="view-info"><a class="flex view-align" href="#"><span> Learn More </span> <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
 		</article>
 		<article>
 			<img src="img/galway-wordpress-theme-development.png">
-			<h1 class="title">Website Design</h1>
-			<p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p>
+			<h1 class="title">Custom WordPress Theme Development</h1>
+			<p>Wordpress CMS is a user-friendly administrative area allowing you to easily edit your website's content</p>
+			<h1 class="view-info"><a class="flex view-align" href="#"><span> Learn More </span> <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
 		</article>
 		<article>
 			<img src="img/galway-wordpress-training-tutoring.png">
-			<h1 class="title">Website Design</h1>
-			<p>Our approach to website design is to create a website that strengthens your company’s brand while ensuring ease of use and simplicity for your audience.</p>
+			<h1 class="title">Wordpress Training & Tutoring</h1>
+			<p>We offer customised WordPress training to ensure you are confident in updating and maintaining your WordPress website</p>
+			<h1 class="view-info"><a class="flex view-align" href="#"><span> Learn More </span> <i class="fa fa-chevron-circle-right fa-align-right"></i></a></h1>
 		</article>
 	</div>
 </body>
