--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="right-block flex">
 					<nav class="menu">
 						<ul class="nav flex">
-							<li><a href="index.html">Home</a></li>
+							<li><a class="nav-home" href="index.html">Home</a></li>
 							<li><a href="#">Portfolio</a></li>
 							<li><a href="#">Services</a></li>
 							<li><a href="#">About</a></li>
