--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<nav>
-		<ul role="navigation" class="hidden ul">
-			<li><a class="a" href="#">work</a></li>
-			<li><a class="a" href="#">about</a></li>
-			<li><a class="a" href="#">resume</a></li>
-			<li><a class="a" href="#">contact</a></li>
-		</ul>
-	</nav>
 	<header>
 		<div class="border-box">
 		</div>
@@ -43,6 +35,17 @@
 					</div>
 				</div>
 			</div>
+	<nav>
+		<ul role="navigation" class="hidden ul">
+			<li><a class="a" href="#">Home</a></li>
+			<li><a class="a" href="#">Portfolio</a></li>
+			<li><a class="a" href="#">Services</a></li>
+			<li><a class="a" href="#">About</a></li>
+			<li><a class="a" href="#">Blog</a></li>
+			<li><a class="a" href="#">Tutorials</a></li>
+			<li><a class="a" href="#">Contact</a></li>
+		</ul>
+	</nav>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script type="text/javascript">
 				$("#burger-menu").on("click", function(){
