--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 	<nav>
 		<ul role="navigation" class="hidden ul">
-			<li><a class="a" href="#">Home</a></li>
+			<li><a class="a" href="index.html">Home</a></li>
 			<li><a class="a" href="#">Portfolio</a></li>
 			<li><a class="a" href="#">Services</a></li>
 			<li><a class="a" href="#">About</a></li>
